@@ -55,7 +55,6 @@ import java.util.stream.Stream;
 import org.apache.tuweni.bytes.Bytes32;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeAll;
-import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.DynamicTest;
 import org.junit.jupiter.api.Tag;
@@ -65,7 +64,6 @@ import org.junit.jupiter.api.Tag;
 @Tag(SMART_CONTRACT)
 @HapiTestLifecycle
 @DisplayName("Records Suite")
-@Disabled
 public class AtomicRecordsSuite {
 
     public static final String LOG_NOW = "logNow";
@@ -197,7 +195,7 @@ public class AtomicRecordsSuite {
                     final var firstCallLogs =
                             firstCallRecord.getContractCallResult().getLogInfoList();
                     final var firstCallTimeLogData =
-                            firstCallLogs.get(0).getData().toByteArray();
+                            firstCallLogs.getFirst().getData().toByteArray();
                     final var firstCallTimestamp =
                             Longs.fromByteArray(Arrays.copyOfRange(firstCallTimeLogData, 24, 32));
 
@@ -205,7 +203,7 @@ public class AtomicRecordsSuite {
                     final var secondCallLogs =
                             secondCallRecord.getContractCallResult().getLogInfoList();
                     final var secondCallTimeLogData =
-                            secondCallLogs.get(0).getData().toByteArray();
+                            secondCallLogs.getFirst().getData().toByteArray();
                     final var secondCallTimestamp =
                             Longs.fromByteArray(Arrays.copyOfRange(secondCallTimeLogData, 24, 32));
 
